--- a/index.html
+++ b/index.html
@@ -376,7 +376,29 @@
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
+            <div class="modal-prime-div">
+                <h2 class="modal-group-text">Оставьте свои данные, мы вам перезвоним</h2>
+                <form action="#" class="contact-form" >
+                <h3 class="group-title-text">Имя</h3>
+                <input type="text" class="contact-form-input" required>
+                <h3 class="group-title-text">Телефон</h3>
+                <input type="tel" class="contact-form-input" required>
+                <h3 class="group-title-text">Почта</h3>
+                <input type="email" class="contact-form-input" required>
+            </form>
+            <div class="gp-wrapper">
+                <h3 class="group-title-text">Коментарии</h3>
+                <textarea name="user-message" class="contact-form-message" placeholder="Введите текст"></textarea>
+            </div>
+            
+            <div class="group-wrapper">
+                <input type="checkbox" class="contact-form-put"><span class="contact-yes">Соглащаюсь с рассылкой и принимаю</span><a href="http://">Условия догова</a>
+            </div>
+            <button type="submit" class="contact-form-btn"><span class="contact-form-btn-text">Отправить</span>
+                </button>
+            </div>
         </div>
+        
     </div>
     <script src="./js/modal.js"></script>
 </body>
