--- a/index.html
+++ b/index.html
@@ -361,8 +361,22 @@
                             <svg class="footer-social-list-icon">
                                 <use href="./images/sprite.svg#icon-linkedin-1"></use>
                             </svg>
-                        </a></li>
-                    </ul>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="section-footer-form">
+                <p class="footer-form-title">подпишитесь на рассылку</p>
+                <form class="footer-form">
+                    <input class="footer-form-email" name="email" type="email" 
+                    placeholder="E-mail" required autocomplete="off">
+                    <button class="footer-form-btn" type="submit">
+                        Подписаться
+                        <svg class="footer-btn-icon" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
 
